<resources>
    <string name="app_name">InmobiliariaJonathan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="inmueble">Inmueble</string>
    <string name="perfil">Perfil</string>
    <string name="inicio">Inicio</string>
    <string name="inquilino">Inquilino</string>
    <string name="contrato">Contrato</string>
    <string name="logout">Logout</string>
    <string name="login">LOGIN</string>
    <string name="inmobiliaria_la_punta">Inmobiliaria La Punta</string>
    <string name="contrase_a">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="yes">"Aceptar"</string>
    <string name="no">"Cancelar"</string>
</resources>