<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/inicio_menu"
            android:title="@string/inicio" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/perfil_menu"
            android:title="@string/perfil" />
        <item
            android:id="@+id/nav_inmueble"
            android:icon="@drawable/inmueble_menu"
            android:title="@string/inmueble" />
        <item
            android:id="@+id/nav_inquilino"
            android:icon="@drawable/perfil_inquilino_menu"
            android:title="@string/inquilino" />
        <item
            android:id="@+id/nav_contrato"
            android:icon="@drawable/contratos_menu"
            android:title="@string/contrato" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/exit_menu"
            android:title="@string/logout" />
    </group>
</menu>