<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:outlineAmbientShadowColor="@color/black"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="102dp"
        android:layout_height="98dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@drawable/imageniniciorojofinal" />

    <TextView
        android:id="@+id/NombreHeader"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/EmailHeader"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:text="@string/nav_header_subtitle" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#333333"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />
</LinearLayout>